kubernetes/cloudflare-lazztech-ddns.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cloudflare-lazztech-ddns-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cloudflare-lazztech-ddns
  template:
    metadata:
      labels:
        app: cloudflare-lazztech-ddns
    spec:
      containers:
        - name: cloudflare-lazztech-ddns
          image: oznu/cloudflare-ddns
          resources:
            requests:
              cpu: 15m
              memory: 105M
            limits:
              cpu: 15m
              memory: 105M
