kubernetes/postgres.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
  labels:
    app: postgres
spec:
  ports:
  - port: 5432
    targetPort: 5432
    name: tcp
  selector:
    app: postgres
