kubernetes/matrix.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: matrix-deployment
  labels:
    app: matrix
spec:
  replicas: 1
  selector:
    matchLabels:
      app: matrix
  template:
    metadata:
      labels:
        app: matrix
    spec:
      containers:
        - name: matrix-synapse-server
          image: matrixdotorg/synapse:v1.49.2
          resources:
            requests:
              memory: "512Mi"
              cpu: "500m"
            limits:
              memory: "512Mi"
              cpu: "500m"
          volumeMounts:
          - mountPath: /data
            name: matrix-data
            subPath: data
          imagePullPolicy: IfNotPresent
        - name: matrix-element-web
          image: vectorim/element-web:v1.9.8
          resources:
            requests:
              memory: "64Mi"
              cpu: "100m"
            limits:
              memory: "64Mi"
              cpu: "100m"
          volumeMounts:
          - mountPath: app/config.json
            name: matrix-config
            subPath: client-config.json
          imagePullPolicy: IfNotPresent
      volumes:
      - name: matrix-config
        configMap:
          name: matrix-config
          items:
            - key: client-config.json
              path: client-config.json
      - name: matrix-data
        persistentVolumeClaim:
          claimName: matrix-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: matrix-service
  labels:
    app: matrix
spec:
  ports:
  - port: 8008
    targetPort: 8008
    name: server
  - port: 80
    targetPort: 80
    name: client
  - port: 5000
    targetPort: 5000
    name: registration
  selector:
    app: matrix
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: matrix-element-web-ingress
  labels:
    app: matrix
  annotations:
    kubernetes.io/ingress.class: "traefik"
    traefik.ingress.kubernetes.io/redirect-entry-point: https
spec:
  tls:
    - secretName: internal-acme-crt-secret
      hosts:
        - '*.internal.lazz.tech'
  rules:
  - host: matrix.internal.lazz.tech
    http:
      paths:
      - backend:
          serviceName: matrix-service
          servicePort: server
  - host: matrix.lazz.tech
    http:
      paths:
      - backend:
          serviceName: matrix-service
          servicePort: server
  - host: chat.internal.lazz.tech
    http:
      paths:
      - backend:
          serviceName: matrix-service
          servicePort: client
  - host: chat.lazz.tech
    http:
      paths:
      - backend:
          serviceName: matrix-service
          servicePort: client
